--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
       This site is a sample project for the <strong>awesome</strong> Git
       tutorial <a href="https://www.learnenough.com/git-tutorial">…</a> <em>Learn Enough™ Git to Be Dangerous</em>.
     </p>
+    Link to index.html <a https://jakobusvandermerwe.github.io/website/index.html>Index page</a>
   </body>
 </html>
 
