--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
       This site is a sample project for the <strong>awesome</strong> Git
       tutorial <a href="https://www.learnenough.com/git-tutorial">…</a> <em>Learn Enough™ Git to Be Dangerous</em>.
     </p>
-    <p><a https://jakobusvandermerwe.github.io/website/index.html>Index page</a></p>
+    <p><a href="https://jakobusvandermerwe.github.io/website/index.html">Index page</a></p>
   </body>
 </html>
 
